# predicting_goodreads_review_ratings

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  download_data.sh  eval.sh  kaggle_submission.ipynb  kagglegoodreads.ipynb  make_preds.sh  prepare_data.sh  pyproject.toml  requirements.txt  run_all.sh  train.sh
notebooks/: EDA.ipynb  development.ipynb
src/: config.py  eval_model.py  make_preds.py  prepare_data.py  train_model.py
tests/: test_prepare_data.py  test_train_model.py
