[tool.poetry]
name = "predicting-goodreads-review-ratings"
version = "0.1.0"
description = ""
authors = ["Ben Gayther <benjigayther@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
datasets = "^2.18.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
polars = "^0.20.17"
seaborn = "^0.13.2"
torch = "^2.2.2"
transformers = {extras = ["torch"], version = "^4.39.2"}
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
