[tool.poetry]
name = "predicting-goodreads-review-ratings"
version = "0.1.0"
description = ""
authors = ["Ben Gayther <benjigayther@hotmail.com>"]
readme = "README.md"
# package = [{ include = ["predicting_goodreads_review_ratings"], from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
datasets = "^2.18.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
seaborn = "^0.13.2"
torch = "^2.2.2"
transformers = { extras = ["torch"], version = "^4.39.2" }
matplotlib = "^3.8.3"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
addopts = ["-v", "--cov=src", "--cov-report=term-missing", "--cov-report=xml"]
